syntax = "proto3";

service BuiltinLedgerGrpcService {
  // All unary RPCs.
  rpc CreateAccount(GrpcAccount) returns (GrpcId);
  rpc CreateJournalEntries(GrpcJournalEntryArray) returns (GrpcIdArray);
  rpc GetAccountById(GrpcId) returns (GrpcGetAccountByIdResponse);
  rpc GetAccountsByExternalId(GrpcId) returns (GrpcGetAccountsByExternalIdResponse);
  rpc GetJournalEntriesByAccountId(GrpcId) returns (GrpcGetJournalEntriesByAccountIdResponse);
}

// TODO: check types; names starting with Grpc?

// TODO: use strings directly instead of having this type.
message GrpcId {
  string grpcId = 1;
}

message GrpcIdArray {
  repeated GrpcId grpcIdArray = 1;
}

message GrpcAccount {
  string id = 1;
  string state = 3;
  string type = 4;
	string currencyCode = 5;
  uint32 currencyDecimals = 6;
  string debitBalance = 7;
  string creditBalance = 8;
  uint64 timestampLastJournalEntry = 9;
}

message GrpcGetAccountByIdResponse {
  bool accountFound = 1;
  GrpcAccount grpcAccount = 2;
}

message GrpcGetAccountsByExternalIdResponse {
  bool accountsFound = 1;
  repeated GrpcAccount grpcAccounts = 2;
}

message GrpcJournalEntry {
  string id = 1;
	string currencyCode = 4;
  uint32 currencyDecimals = 5;
	string amount = 6;
	string debitedAccountId = 7;
  string creditedAccountId = 8;
  uint64 timestamp = 9;
}

message GrpcJournalEntryArray {
  repeated GrpcJournalEntry grpcJournalEntryArray = 1;
}

message GrpcGetJournalEntriesByAccountIdResponse {
  bool journalEntriesFound = 1;
  repeated GrpcJournalEntry grpcJournalEntries = 2;
}
