syntax = "proto3";

service AccountsAndBalancesGrpcService {
    rpc CreateAccount(Account) returns (string) {}
    rpc CreateJournalEntries(stream JournalEntry) returns (stream string) {}
    rpc GetAccountById(string) returns (Account) {}
    rpc GetAccountsByExternalId(string) returns (stream Account) {}
    rpc GetJournalEntriesByAccountId(string) returns (stream JournalEntry) {}
}

message Account {
    string id = 1;
	string | null externalId = 2;
	AccountState state = 3;
	AccountType type = 4;
	string currency = 5;
	bigint creditBalance = 6;
	bigint debitBalance = 7;
	number timestampLastJournalEntry = 8;
}

message JournalEntry {
    string id = 1;
    string | null externalId = 2;
	string | null externalCategory = 3;
	string currency = 4;
	bigint amount = 5;
	string creditedAccountId = 6;
	string debitedAccountId = 7;
	number timestamp = 8;
}
